[package]
name = "smallvil"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bitflags = "1"

[dependencies.smithay]
path = "../"
default-features = false
features = [
    "backend_winit",
    "color_lcms",
    "wayland_frontend",
    "desktop",
]
