[package]
name = "smithay-drm-extras"
version = "0.1.0"
edition = "2021"

[dependencies]
edid-rs = "0.1.0"
drm = { version = "0.9.0" }

[features]
default = []
generate-hwdata = ["pkg-config"]

[dev-dependencies.smithay]
path = "../"

[build-dependencies]
pkg-config = { version = "0.3.26", optional = true }
