[package]
name = "smithay-drm-extras"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Bartłomiej Maryńczak <marynczakbartlomiej@gmail.com>"]

[dependencies]
edid-rs = "0.1.0"
drm = { version = "0.11.0" }

[features]
default = []
generate-hwdata = ["pkg-config"]

[dev-dependencies.smithay]
path = "../"

[build-dependencies]
pkg-config = { version = "0.3.26", optional = true }
