[package]
name = "smithay-drm-extras"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Bartłomiej Maryńczak <marynczakbartlomiej@gmail.com>"]

[dependencies]
libdisplay-info = { version = "0.1.0", optional = true }
drm = { version = "0.12.0" }

[features]
default = ["display-info"]
display-info = ["libdisplay-info"]

[dev-dependencies.smithay]
path = "../"
