[package]
name = "smithay-macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
version = "2"
default-features = false
features = ["parsing", "full", "proc-macro", "printing"]

[dev-dependencies]
smithay = { path = "../" }
