[package]
name = "wlcs_anvil"
version = "0.0.1"
authors = ["Victor Berger <victor.berger@m4x.org>", "Drakulix (Victoria Brekenfeld)"]
license = "MIT"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
smithay = { path = "..", default-features=false, features=["wayland_frontend", "backend_egl", "use_system_lib", "renderer_test"] }
anvil = { path = "../anvil", default-features=false }
wayland-sys = { version = "0.31.1", features = ["client", "server"] }
wlcs = "0.1"
libc = "0.2"
memoffset = "0.9"
cgmath = "0.18"
